.fux CRUD entité et autres API
