# go/api/controllers/paymentController.go
@@ -19,7 +19,7 @@ import (
 // @Produce json
 // @Security Bearer
 // @Param Authorization header string true "Insert your access token" default(Bearer Add access token here)
-// @Param payment body PaymentRequest true "Paiement des jetons ou tombola"
+// @Param payment body requests.PaymentRequest true "Paiement des jetons ou tombola"
 // @Success 200 {object} models.Transaction
 // @Failure 500 {object} gin.H "Erreur serveur interne"
 // @Router /payment [post]
