# go/api/requests/standRequest.go
@@ -1,0 +1,7 @@
+package requests
+
+type StandRequest struct {
+	Name         string `json:"name" binding:"required"`
+	Type         string `son:"type" binding:"required"`
+	JetonsRequis uint   `json:"jetons-requis" binding:"required"`
+}
